model/unpackaged/objects/SIP_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity / Query</label>
        <length>65535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Task_Step__r.Task_Name__c</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Step_Type__c</fullName>
        <formula>TEXT(Task_Step__r.Step_Type__c)</formula>
        <label>Task Step Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task Step</label>
        <referenceTo>SIP_Task_Step__c</referenceTo>
        <relationshipLabel>SIP Entities</relationshipLabel>
        <relationshipName>SIP_Entities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SIP Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_ID__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Task_Step__c</columns>
        <columns>Task_Step_Type__c</columns>
        <columns>Entity_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENT{00000000}</displayFormat>
        <label>SIP Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>